--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -88,4 +88,5 @@ custom_categories:
     - LegCurlExerciseName
     - OlympicLiftExerciseName
     - RunExerciseName
+    - TricepExtensionExerciseName
     - WarmUpExerciseName
