--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -88,5 +88,6 @@ custom_categories:
     - LegCurlExerciseName
     - OlympicLiftExerciseName
     - RunExerciseName
+    - TotalbodyExerciseName
     - TricepExtensionExerciseName
     - WarmUpExerciseName
