--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -88,6 +88,7 @@ custom_categories:
     - LegCurlExerciseName
     - OlympicLiftExerciseName
     - RunExerciseName
+    - ShrugExerciseName
     - SitUpExerciseName
     - TotalBodyExerciseName
     - TricepExtensionExerciseName
