--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -86,6 +86,7 @@ custom_categories:
     - HyperextensionExerciseName
     - LateralRaiseExerciseName
     - LegCurlExerciseName
+    - LegRaiseExerciseName
     - OlympicLiftExerciseName
     - RunExerciseName
     - ShrugExerciseName
